<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.zipper.auto.api.activity.bean.ModuleTaskBean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_module_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_module_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textSize="12sp"
            android:text="@{item.moduleName}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_module_name_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_module_name_title"
            app:layout_constraintTop_toTopOf="@+id/tv_module_name_title"
            tools:text="Task模块1" />

        <TextView
            android:id="@+id/tv_module_exec_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/module_execute_time"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_module_name_title" />

        <TextView
            android:id="@+id/tv_module_exec_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textSize="12sp"
            android:text="@{item.moduleExecTimeFormat}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_module_exec_time_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_module_exec_time_title"
            app:layout_constraintTop_toTopOf="@+id/tv_module_exec_time_title"
            tools:text="2021-10-10 10:10:10" />

        <TextView
            android:id="@+id/btn_module_run"
            android:layout_width="50dp"
            android:layout_height="@dimen/module_btn_h"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:lines="1"
            android:padding="0dp"
            android:text="@string/module_run"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_module_ban"
            app:layout_constraintEnd_toStartOf="@+id/btn_module_ban"
            app:layout_constraintTop_toTopOf="@+id/btn_module_ban" />

        <TextView
            android:id="@+id/btn_module_ban"
            android:layout_width="@dimen/module_btn_w"
            android:layout_height="@dimen/module_btn_h"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:lines="1"
            android:padding="0dp"
            android:text="@string/module_ban"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_module_del"
            app:layout_constraintEnd_toStartOf="@+id/btn_module_del"
            app:layout_constraintTop_toTopOf="@+id/btn_module_del" />

        <TextView
            android:id="@+id/btn_module_del"
            android:layout_width="@dimen/module_btn_w"
            android:layout_height="@dimen/module_btn_h"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/module_delete"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_module_exec_time_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>