<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="bean"
            type="com.zipper.auto.api.activity.bean.VariableBean" />
    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:contentPadding="10dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/title_color"
                    android:text="@string/panel_variable_title"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:textSize="16sp"
                        android:layout_marginVertical="10dp"
                        android:text="@={bean.name}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlined_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="10"
                        android:textSize="16sp"
                        android:layout_marginVertical="10dp"
                        android:text="@={bean.value}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlined_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remarks"
                    android:textSize="16sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        android:textSize="16sp"
                        android:layout_marginVertical="10dp"
                        android:text="@={bean.remarks}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="@={bean.isGlobal}"
                    android:text="@string/global_title"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_gravity="right"
            android:id="@+id/iv_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_close_24"/>
    </FrameLayout>
</layout>