<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="item"
            type="com.zipper.auto.api.activity.bean.VariableBean" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:cardElevation="3dp"
        android:focusable="true"
        android:clickable="true"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Name："
                android:text="@string/name"
                android:textSize="18sp"
                android:textColor="@color/title_color" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Cookie_zzzz"
                android:text="@{item.name}"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="16sp"
                android:layout_marginVertical="10dp"
                android:textColor="@color/material_on_surface_emphasis_high_type" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Value："
                android:text="@string/value"
                android:textSize="18sp"
                android:textColor="@color/title_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="16sp"
                android:text="@{item.value}"
                android:layout_marginVertical="10dp"
                tools:text="pin=sdfasdfasadfasdfas;key=sdafasdfadfafafasfasdsdafdfasdfafadfafasdfa"
                android:textColor="@color/material_on_surface_emphasis_high_type" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/remarks"
                android:textSize="18sp"
                android:textColor="@color/title_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:textSize="16sp"
                android:layout_marginVertical="10dp"
                tools:text="Remarks"
                android:text="@{item.remarks}"
                android:textColor="@color/material_on_surface_emphasis_high_type" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:visibility="@{item.isGlobal ? View.VISIBLE : View.GONE}"
            android:textSize="20sp"
            android:textColor="@color/green"
            tools:text="@string/global"
            android:text="@string/global"/>

    </com.google.android.material.card.MaterialCardView>
</layout>